fix: move connection to dao layer, add List<Book> books field in Author, remove Constant class, add test containers